<resources>
    <string name="app_name">hotel-app</string>
    <string name="about_hotel">Об отеле</string>
    <string name="conveniences_text_view">Удобства</string>
    <string name="most_necessary_text_view">Самое необходимое</string>
    <string name="included_text_view">Что включено</string>
    <string name="not_included_text_view">Что не включено</string>
    <string name="select_number">К выбору номера</string>
    <string name="price_text_view">от %1$s ₽</string>
    <string name="price_room_text_view">%1$s ₽</string>
    <string name="detail_about_room_text_view">Подробнее о номере</string>
    <string name="select_room_textview">Выбрать номер</string>
    <string name="hello">Hello</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="departure">Вылет из</string>
    <string name="country">Страна,город</string>
    <string name="date">Даты</string>
    <string name="number_of_nights">Количество ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="date_value">%1$s - %2$s</string>
    <string name="night_one">%1$s ночь</string>
    <string name="night_two">%1$s ночи</string>
    <string name="night_five">%1$s ночей</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">День рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_name">Номер загранпаспорта</string>
    <string name="passport_validity">Срок действия загранпаспорта</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tourist_1">Первый турист</string>
    <string name="tourist_2">Второй турист</string>
    <string name="tourist_3">Третий турист</string>
    <string name="tourist_4">Четвертый турист</string>
    <string name="tourist_5">Пятый турист</string>
    <string name="tour">Тур</string>
    <string name="fuel_surcharge">Топливный сбор</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="for_payment">К оплате</string>
    <string name="price">%1$s ₽</string>
    <string name="button_pay">Оплатить %1$s ₽</string>
    <string name="paid_for_order">Заказ оплачен</string>
    <string name="payd_for_title">Ваш заказ принят в работу</string>
    <string name="paid_for_description">Подтверждение заказа №%1$s может занять некоторое время (от 1 часа до суток) Как только мы получим ответот туроператора, вам на почту придет уведомление</string>
    <string name="booking">Бронирование</string>
    <string name="text_error_connection_error">Ошибка соединения</string>
    <string name="text_error_error_unknown">Неизвестная ошибка</string>
</resources>