<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.paid_for.PaidForFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_100"
        app:layout_constraintTop_toTopOf="parent">
        
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_for_order"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_marginTop="122dp"
        android:layout_height="94dp"
        app:cardCornerRadius="47dp"
        app:cardBackgroundColor="@color/light_gray"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/normal_150"
            android:scaleType="centerCrop"
            android:src="@drawable/party_popper"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        android:text="@string/payd_for_title"
        android:textSize="@dimen/text_22"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/normal_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDescription"
        android:text="@string/paid_for_description"
        android:textSize="@dimen/text16"
        android:layout_marginStart="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_150"
        android:gravity="center"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/normal_125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>